--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.4",
+    "@vue/apollo-composable": "^4.0.2",
+    "@vue/apollo-option": "^4.0.0",
+    "chart.js": "^4.4.3",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "graphql": "^16.9.0",
+    "react": "^18.3.1",
+    "teste-cotabox": "file:",
+    "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
