--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@apollo/client": "^3.11.4",
     "@vue/apollo-composable": "^4.0.2",
     "@vue/apollo-option": "^4.0.0",
+    "axios": "^1.7.4",
     "chart.js": "^4.4.3",
     "core-js": "^3.8.3",
     "graphql": "^16.9.0",
