--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.9.0",
+    "helmet": "^7.1.0",
     "mongoose": "^8.5.3"
   }
 }
