--- a/backend/package.json
+++ b/backend/package.json
@@ -11,13 +11,17 @@
   "description": "",
   "dependencies": {
     "apollo-server": "^3.13.0",
+    "backend": "file:",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-graphql": "^0.12.0",
     "graphql": "^16.9.0",
     "helmet": "^7.1.0",
-    "mongoose": "^8.5.3"
+    "mongoose": "^8.5.3",
+    "ws": "^8.18.0"
+  },
+  "devDependencies": {
+    "npm-force-resolutions": "^0.0.10"
   }
 }
