--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.4.3",
     "core-js": "^3.8.3",
     "graphql": "^16.9.0",
+    "graphql-ws": "^5.16.0",
     "react": "^18.3.1",
     "teste-cotabox": "file:",
     "vue": "^3.2.13",
