--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,12 @@
     "apollo-server": "^3.13.0",
     "backend": "file:",
     "body-parser": "^1.20.2",
+    "chart.js": "^4.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "graphql": "^16.9.0",
+    "graphql-subscriptions": "^2.0.0",
     "helmet": "^7.1.0",
     "mongoose": "^8.5.3",
     "ws": "^8.18.0"
