--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@vue/apollo-composable": "^4.0.2",
     "@vue/apollo-option": "^4.0.0",
     "axios": "^1.7.4",
-    "chart.js": "^4.3.0",
+    "bulma": "^1.0.2",
     "core-js": "^3.8.3",
+    "echarts": "^5.5.1",
     "graphql": "^16.9.0",
     "graphql-ws": "^5.16.0",
     "teste-cotabox": "file:",
